[package]
name = "queso"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2"
oxc_ast = { version = "0.48" }
oxc_allocator = { version = "0.48" }
oxc_parser = { version = "0.48" }
oxc_semantic = { version = "0.48" }
oxc_span = { version = "0.48" }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"

