[package]
name = "bumblebee"
version = "0.1.0"
edition = "2021"

[dependencies]
ignore = "0.4"
oxc_ast = { version = "0.57" }
oxc_allocator = { version = "0.57" }
oxc_parser = { version = "0.57" }
oxc_semantic = { version = "0.57" }
oxc_span = { version = "0.57" }
oxc_resolver = { version = "5.0" }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
